testsuite/gnatprove/tests/SB07-003__crash/test.out
database.adb:10:13: info: implicit aspect Always_Terminates on overriding operator "=" has been proved, subprogram will terminate
database.adb:15:04: error: "Item" is not writable
database.adb:15:04: error: instantiation error at spark-containers-formal-doubly_linked_lists.ads:111
database.adb:15:04: error: instantiation error at spark-containers-functional-vectors.ads:308
database.adb:15:04: error: object was declared as not writable at spark-containers-functional-vectors.ads:308, instance at spark-containers-formal-doubly_linked_lists.ads:111, instance at line 15
database.adb:19:04: info: initialization of "Database" proved
database.ads:6:13: info: implicit aspect Always_Terminates on "Query_Email" has been proved, subprogram will terminate
gnatprove: error during flow analysis and proof
